demo/lab-docker-k8s/02-k8s-traefik/gitea/svc-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-server
  namespace: devoxx
  labels:
    guilde: git
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: gitea-http
    - port: 22
      name: gitea-ssh
  selector:
    guilde: git
    faction: server

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea-ingress
  namespace: devoxx
  labels:
    guilde: git
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: lab.nicolas.containous.cloud
    http:
      paths:
      - path: /gitserver
        backend:
          serviceName: gitea-server
          servicePort: 3000
